# editor-reader

./: .gitmodules  a.java  method.java  notes.txt
editor-reader/: Cargo.toml  build.rs  out  plan.md
editor-reader/src/: main.rs
nvim/: init.lua
