[package]
name = "editor-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
libc = "0.2.103"
tree-sitter = "0.20.0"
async-std = "1.10.0" # not sure what to use, this or tokio: this seems good for now

[build-dependencies]
cc="*"
